decaf.output
Terminals unused in grammar

   NULL_TOKEN
   NOT
   '='
   '['
   '.'


Grammar

    0 $accept: program $end

    1 program: CLASS PROGRAM OPEN_BRACE field_decl_multiple method_decl_multiple CLOSE_BRACE

    2 field_decl_multiple: /* empty */
    3                    | field_decl_multiple field_decl_single SEMI_COLON

    4 field_decl_single: TYPE idList

    5 idList: IDENTIFIER id_single
    6       | IDENTIFIER OPEN_SQR_BRACKET int_literal CLOSE_SQR_BRACKET id_single

    7 id_single: /* empty */
    8          | COMMA IDENTIFIER id_single
    9          | COMMA IDENTIFIER OPEN_SQR_BRACKET int_literal CLOSE_SQR_BRACKET id_single

   10 method_decl_multiple: /* empty */
   11                     | method_decl_single method_decl_multiple

   12 method_decl_single: TYPE IDENTIFIER argumentList block
   13                   | VOID IDENTIFIER argumentList block

   14 argumentList: OPEN_PARENTHESES CLOSE_PARENTHESES
   15             | OPEN_PARENTHESES TYPE IDENTIFIER arg CLOSE_PARENTHESES

   16 arg: /* empty */
   17    | COMMA TYPE IDENTIFIER arg

   18 block: OPEN_BRACE var_decl_multiple statement_multiple CLOSE_BRACE

   19 var_decl_multiple: /* empty */
   20                  | var_decl_single SEMI_COLON var_decl_multiple

   21 var_decl_single: TYPE IDENTIFIER variableList

   22 variableList: /* empty */
   23             | COMMA IDENTIFIER variableList

   24 statement_multiple: /* empty */
   25                   | statement_multiple statement_single

   26 statement_single: location ASSIGNMENT_OPERATOR expr SEMI_COLON
   27                 | method_call SEMI_COLON
   28                 | IF condition block else_block
   29                 | FOR IDENTIFIER ASSIGNMENT_OPERATOR expr COMMA expr block
   30                 | RETURN return_expr SEMI_COLON
   31                 | BREAK SEMI_COLON
   32                 | CONTINUE SEMI_COLON
   33                 | block

   34 else_block: /* empty */
   35           | ELSE block

   36 condition: OPEN_PARENTHESES expr CLOSE_PARENTHESES

   37 return_expr: /* empty */
   38            | expr

   39 expr: location
   40     | method_call
   41     | literal
   42     | arith_expr
   43     | rel_expr
   44     | equal_expr
   45     | condition_expr
   46     | MINUS expr
   47     | '!' expr
   48     | OPEN_PARENTHESES expr CLOSE_PARENTHESES

   49 location: IDENTIFIER
   50         | IDENTIFIER OPEN_SQR_BRACKET expr CLOSE_SQR_BRACKET

   51 method_call: method_name OPEN_PARENTHESES parameterList CLOSE_PARENTHESES
   52            | CALLOUT OPEN_PARENTHESES STRING_LITERAL callout_arg CLOSE_PARENTHESES

   53 method_name: IDENTIFIER

   54 parameterList: /* empty */
   55              | expr parameter

   56 parameter: /* empty */
   57          | COMMA expr parameter

   58 literal: int_literal
   59        | CHAR_LITERAL
   60        | BOOL_LITERAL

   61 int_literal: DECIMAL_LITERAL
   62            | HEX_LITERAL

   63 arith_expr: expr MULTIPLY expr
   64           | expr DIVIDE expr
   65           | expr MOD expr
   66           | expr PLUS expr
   67           | expr MINUS expr

   68 rel_expr: expr LESS expr
   69         | expr GREATER expr
   70         | expr LESS_EQUAL expr
   71         | expr GREATER_EQUAL expr

   72 equal_expr: expr EQUAL_EQUAL expr
   73           | expr NOT_EQUAL expr

   74 condition_expr: expr AND expr
   75               | expr OR expr

   76 callout_arg: /* empty */
   77            | callout_arg COMMA expr
   78            | callout_arg COMMA STRING_LITERAL


Terminals, with rules where they appear

$end (0) 0
'!' (33) 47
'.' (46)
'=' (61)
'[' (91)
error (256)
CLASS (258) 1
PROGRAM (259) 1
FOR (260) 29
IF (261) 28
ELSE (262) 35
CONTINUE (263) 32
BREAK (264) 31
RETURN (265) 30
CALLOUT (266) 52
ASSIGNMENT_OPERATOR (267) 26 29
IDENTIFIER (268) 5 6 8 9 12 13 15 17 21 23 29 49 50 53
VOID (269) 13
TYPE (270) 4 12 15 17 21
HEX_LITERAL (271) 62
DECIMAL_LITERAL (272) 61
CHAR_LITERAL (273) 59
BOOL_LITERAL (274) 60
STRING_LITERAL (275) 52 78
SEMI_COLON (276) 3 20 26 27 30 31 32
OPEN_PARENTHESES (277) 14 15 36 48 51 52
CLOSE_PARENTHESES (278) 14 15 36 48 51 52
OPEN_SQR_BRACKET (279) 6 9 50
CLOSE_SQR_BRACKET (280) 6 9 50
OPEN_BRACE (281) 1 18
CLOSE_BRACE (282) 1 18
NULL_TOKEN (283)
COMMA (284) 8 9 17 23 29 57 77 78
NOT (285)
OR (286) 75
AND (287) 74
NOT_EQUAL (288) 73
EQUAL_EQUAL (289) 72
LESS_EQUAL (290) 70
GREATER_EQUAL (291) 71
GREATER (292) 69
LESS (293) 68
MINUS (294) 46 67
PLUS (295) 66
MOD (296) 65
DIVIDE (297) 64
MULTIPLY (298) 63


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
field_decl_multiple (50)
    on left: 2 3, on right: 1 3
field_decl_single (51)
    on left: 4, on right: 3
idList (52)
    on left: 5 6, on right: 4
id_single (53)
    on left: 7 8 9, on right: 5 6 8 9
method_decl_multiple (54)
    on left: 10 11, on right: 1 11
method_decl_single (55)
    on left: 12 13, on right: 11
argumentList (56)
    on left: 14 15, on right: 12 13
arg (57)
    on left: 16 17, on right: 15 17
block (58)
    on left: 18, on right: 12 13 28 29 33 35
var_decl_multiple (59)
    on left: 19 20, on right: 18 20
var_decl_single (60)
    on left: 21, on right: 20
variableList (61)
    on left: 22 23, on right: 21 23
statement_multiple (62)
    on left: 24 25, on right: 18 25
statement_single (63)
    on left: 26 27 28 29 30 31 32 33, on right: 25
else_block (64)
    on left: 34 35, on right: 28
condition (65)
    on left: 36, on right: 28
return_expr (66)
    on left: 37 38, on right: 30
expr (67)
    on left: 39 40 41 42 43 44 45 46 47 48, on right: 26 29 36 38 46
    47 48 50 55 57 63 64 65 66 67 68 69 70 71 72 73 74 75 77
location (68)
    on left: 49 50, on right: 26 39
method_call (69)
    on left: 51 52, on right: 27 40
method_name (70)
    on left: 53, on right: 51
parameterList (71)
    on left: 54 55, on right: 51
parameter (72)
    on left: 56 57, on right: 55 57
literal (73)
    on left: 58 59 60, on right: 41
int_literal (74)
    on left: 61 62, on right: 6 9 58
arith_expr (75)
    on left: 63 64 65 66 67, on right: 42
rel_expr (76)
    on left: 68 69 70 71, on right: 43
equal_expr (77)
    on left: 72 73, on right: 44
condition_expr (78)
    on left: 74 75, on right: 45
callout_arg (79)
    on left: 76 77 78, on right: 52 77 78


state 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program  go to state 2


state 1

    1 program: CLASS . PROGRAM OPEN_BRACE field_decl_multiple method_decl_multiple CLOSE_BRACE

    PROGRAM  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    1 program: CLASS PROGRAM . OPEN_BRACE field_decl_multiple method_decl_multiple CLOSE_BRACE

    OPEN_BRACE  shift, and go to state 5


state 4

    0 $accept: program $end .

    $default  accept


state 5

    1 program: CLASS PROGRAM OPEN_BRACE . field_decl_multiple method_decl_multiple CLOSE_BRACE

    $default  reduce using rule 2 (field_decl_multiple)

    field_decl_multiple  go to state 6


state 6

    1 program: CLASS PROGRAM OPEN_BRACE field_decl_multiple . method_decl_multiple CLOSE_BRACE
    3 field_decl_multiple: field_decl_multiple . field_decl_single SEMI_COLON

    VOID  shift, and go to state 7
    TYPE  shift, and go to state 8

    $default  reduce using rule 10 (method_decl_multiple)

    field_decl_single     go to state 9
    method_decl_multiple  go to state 10
    method_decl_single    go to state 11


state 7

   13 method_decl_single: VOID . IDENTIFIER argumentList block

    IDENTIFIER  shift, and go to state 12


state 8

    4 field_decl_single: TYPE . idList
   12 method_decl_single: TYPE . IDENTIFIER argumentList block

    IDENTIFIER  shift, and go to state 13

    idList  go to state 14


state 9

    3 field_decl_multiple: field_decl_multiple field_decl_single . SEMI_COLON

    SEMI_COLON  shift, and go to state 15


state 10

    1 program: CLASS PROGRAM OPEN_BRACE field_decl_multiple method_decl_multiple . CLOSE_BRACE

    CLOSE_BRACE  shift, and go to state 16


state 11

   11 method_decl_multiple: method_decl_single . method_decl_multiple

    VOID  shift, and go to state 7
    TYPE  shift, and go to state 17

    $default  reduce using rule 10 (method_decl_multiple)

    method_decl_multiple  go to state 18
    method_decl_single    go to state 11


state 12

   13 method_decl_single: VOID IDENTIFIER . argumentList block

    OPEN_PARENTHESES  shift, and go to state 19

    argumentList  go to state 20


state 13

    5 idList: IDENTIFIER . id_single
    6       | IDENTIFIER . OPEN_SQR_BRACKET int_literal CLOSE_SQR_BRACKET id_single
   12 method_decl_single: TYPE IDENTIFIER . argumentList block

    OPEN_PARENTHESES  shift, and go to state 19
    OPEN_SQR_BRACKET  shift, and go to state 21
    COMMA             shift, and go to state 22

    $default  reduce using rule 7 (id_single)

    id_single     go to state 23
    argumentList  go to state 24


state 14

    4 field_decl_single: TYPE idList .

    $default  reduce using rule 4 (field_decl_single)


state 15

    3 field_decl_multiple: field_decl_multiple field_decl_single SEMI_COLON .

    $default  reduce using rule 3 (field_decl_multiple)


state 16

    1 program: CLASS PROGRAM OPEN_BRACE field_decl_multiple method_decl_multiple CLOSE_BRACE .

    $default  reduce using rule 1 (program)


state 17

   12 method_decl_single: TYPE . IDENTIFIER argumentList block

    IDENTIFIER  shift, and go to state 25


state 18

   11 method_decl_multiple: method_decl_single method_decl_multiple .

    $default  reduce using rule 11 (method_decl_multiple)


state 19

   14 argumentList: OPEN_PARENTHESES . CLOSE_PARENTHESES
   15             | OPEN_PARENTHESES . TYPE IDENTIFIER arg CLOSE_PARENTHESES

    TYPE               shift, and go to state 26
    CLOSE_PARENTHESES  shift, and go to state 27


state 20

   13 method_decl_single: VOID IDENTIFIER argumentList . block

    OPEN_BRACE  shift, and go to state 28

    block  go to state 29


state 21

    6 idList: IDENTIFIER OPEN_SQR_BRACKET . int_literal CLOSE_SQR_BRACKET id_single

    HEX_LITERAL      shift, and go to state 30
    DECIMAL_LITERAL  shift, and go to state 31

    int_literal  go to state 32


state 22

    8 id_single: COMMA . IDENTIFIER id_single
    9          | COMMA . IDENTIFIER OPEN_SQR_BRACKET int_literal CLOSE_SQR_BRACKET id_single

    IDENTIFIER  shift, and go to state 33


state 23

    5 idList: IDENTIFIER id_single .

    $default  reduce using rule 5 (idList)


state 24

   12 method_decl_single: TYPE IDENTIFIER argumentList . block

    OPEN_BRACE  shift, and go to state 28

    block  go to state 34


state 25

   12 method_decl_single: TYPE IDENTIFIER . argumentList block

    OPEN_PARENTHESES  shift, and go to state 19

    argumentList  go to state 24


state 26

   15 argumentList: OPEN_PARENTHESES TYPE . IDENTIFIER arg CLOSE_PARENTHESES

    IDENTIFIER  shift, and go to state 35


state 27

   14 argumentList: OPEN_PARENTHESES CLOSE_PARENTHESES .

    $default  reduce using rule 14 (argumentList)


state 28

   18 block: OPEN_BRACE . var_decl_multiple statement_multiple CLOSE_BRACE

    TYPE  shift, and go to state 36

    $default  reduce using rule 19 (var_decl_multiple)

    var_decl_multiple  go to state 37
    var_decl_single    go to state 38


state 29

   13 method_decl_single: VOID IDENTIFIER argumentList block .

    $default  reduce using rule 13 (method_decl_single)


state 30

   62 int_literal: HEX_LITERAL .

    $default  reduce using rule 62 (int_literal)


state 31

   61 int_literal: DECIMAL_LITERAL .

    $default  reduce using rule 61 (int_literal)


state 32

    6 idList: IDENTIFIER OPEN_SQR_BRACKET int_literal . CLOSE_SQR_BRACKET id_single

    CLOSE_SQR_BRACKET  shift, and go to state 39


state 33

    8 id_single: COMMA IDENTIFIER . id_single
    9          | COMMA IDENTIFIER . OPEN_SQR_BRACKET int_literal CLOSE_SQR_BRACKET id_single

    OPEN_SQR_BRACKET  shift, and go to state 40
    COMMA             shift, and go to state 22

    $default  reduce using rule 7 (id_single)

    id_single  go to state 41


state 34

   12 method_decl_single: TYPE IDENTIFIER argumentList block .

    $default  reduce using rule 12 (method_decl_single)


state 35

   15 argumentList: OPEN_PARENTHESES TYPE IDENTIFIER . arg CLOSE_PARENTHESES

    COMMA  shift, and go to state 42

    $default  reduce using rule 16 (arg)

    arg  go to state 43


state 36

   21 var_decl_single: TYPE . IDENTIFIER variableList

    IDENTIFIER  shift, and go to state 44


state 37

   18 block: OPEN_BRACE var_decl_multiple . statement_multiple CLOSE_BRACE

    $default  reduce using rule 24 (statement_multiple)

    statement_multiple  go to state 45


state 38

   20 var_decl_multiple: var_decl_single . SEMI_COLON var_decl_multiple

    SEMI_COLON  shift, and go to state 46


state 39

    6 idList: IDENTIFIER OPEN_SQR_BRACKET int_literal CLOSE_SQR_BRACKET . id_single

    COMMA  shift, and go to state 22

    $default  reduce using rule 7 (id_single)

    id_single  go to state 47


state 40

    9 id_single: COMMA IDENTIFIER OPEN_SQR_BRACKET . int_literal CLOSE_SQR_BRACKET id_single

    HEX_LITERAL      shift, and go to state 30
    DECIMAL_LITERAL  shift, and go to state 31

    int_literal  go to state 48


state 41

    8 id_single: COMMA IDENTIFIER id_single .

    $default  reduce using rule 8 (id_single)


state 42

   17 arg: COMMA . TYPE IDENTIFIER arg

    TYPE  shift, and go to state 49


state 43

   15 argumentList: OPEN_PARENTHESES TYPE IDENTIFIER arg . CLOSE_PARENTHESES

    CLOSE_PARENTHESES  shift, and go to state 50


state 44

   21 var_decl_single: TYPE IDENTIFIER . variableList

    COMMA  shift, and go to state 51

    $default  reduce using rule 22 (variableList)

    variableList  go to state 52


state 45

   18 block: OPEN_BRACE var_decl_multiple statement_multiple . CLOSE_BRACE
   25 statement_multiple: statement_multiple . statement_single

    FOR          shift, and go to state 53
    IF           shift, and go to state 54
    CONTINUE     shift, and go to state 55
    BREAK        shift, and go to state 56
    RETURN       shift, and go to state 57
    CALLOUT      shift, and go to state 58
    IDENTIFIER   shift, and go to state 59
    OPEN_BRACE   shift, and go to state 28
    CLOSE_BRACE  shift, and go to state 60

    block             go to state 61
    statement_single  go to state 62
    location          go to state 63
    method_call       go to state 64
    method_name       go to state 65


state 46

   20 var_decl_multiple: var_decl_single SEMI_COLON . var_decl_multiple

    TYPE  shift, and go to state 36

    $default  reduce using rule 19 (var_decl_multiple)

    var_decl_multiple  go to state 66
    var_decl_single    go to state 38


state 47

    6 idList: IDENTIFIER OPEN_SQR_BRACKET int_literal CLOSE_SQR_BRACKET id_single .

    $default  reduce using rule 6 (idList)


state 48

    9 id_single: COMMA IDENTIFIER OPEN_SQR_BRACKET int_literal . CLOSE_SQR_BRACKET id_single

    CLOSE_SQR_BRACKET  shift, and go to state 67


state 49

   17 arg: COMMA TYPE . IDENTIFIER arg

    IDENTIFIER  shift, and go to state 68


state 50

   15 argumentList: OPEN_PARENTHESES TYPE IDENTIFIER arg CLOSE_PARENTHESES .

    $default  reduce using rule 15 (argumentList)


state 51

   23 variableList: COMMA . IDENTIFIER variableList

    IDENTIFIER  shift, and go to state 69


state 52

   21 var_decl_single: TYPE IDENTIFIER variableList .

    $default  reduce using rule 21 (var_decl_single)


state 53

   29 statement_single: FOR . IDENTIFIER ASSIGNMENT_OPERATOR expr COMMA expr block

    IDENTIFIER  shift, and go to state 70


state 54

   28 statement_single: IF . condition block else_block

    OPEN_PARENTHESES  shift, and go to state 71

    condition  go to state 72


state 55

   32 statement_single: CONTINUE . SEMI_COLON

    SEMI_COLON  shift, and go to state 73


state 56

   31 statement_single: BREAK . SEMI_COLON

    SEMI_COLON  shift, and go to state 74


state 57

   30 statement_single: RETURN . return_expr SEMI_COLON

    CALLOUT           shift, and go to state 58
    IDENTIFIER        shift, and go to state 59
    HEX_LITERAL       shift, and go to state 30
    DECIMAL_LITERAL   shift, and go to state 31
    CHAR_LITERAL      shift, and go to state 75
    BOOL_LITERAL      shift, and go to state 76
    OPEN_PARENTHESES  shift, and go to state 77
    MINUS             shift, and go to state 78
    '!'               shift, and go to state 79

    $default  reduce using rule 37 (return_expr)

    return_expr     go to state 80
    expr            go to state 81
    location        go to state 82
    method_call     go to state 83
    method_name     go to state 65
    literal         go to state 84
    int_literal     go to state 85
    arith_expr      go to state 86
    rel_expr        go to state 87
    equal_expr      go to state 88
    condition_expr  go to state 89


state 58

   52 method_call: CALLOUT . OPEN_PARENTHESES STRING_LITERAL callout_arg CLOSE_PARENTHESES

    OPEN_PARENTHESES  shift, and go to state 90


state 59

   49 location: IDENTIFIER .
   50         | IDENTIFIER . OPEN_SQR_BRACKET expr CLOSE_SQR_BRACKET
   53 method_name: IDENTIFIER .

    OPEN_SQR_BRACKET  shift, and go to state 91

    OPEN_PARENTHESES  reduce using rule 53 (method_name)
    $default          reduce using rule 49 (location)


state 60

   18 block: OPEN_BRACE var_decl_multiple statement_multiple CLOSE_BRACE .

    $default  reduce using rule 18 (block)


state 61

   33 statement_single: block .

    $default  reduce using rule 33 (statement_single)


state 62

   25 statement_multiple: statement_multiple statement_single .

    $default  reduce using rule 25 (statement_multiple)


state 63

   26 statement_single: location . ASSIGNMENT_OPERATOR expr SEMI_COLON

    ASSIGNMENT_OPERATOR  shift, and go to state 92


state 64

   27 statement_single: method_call . SEMI_COLON

    SEMI_COLON  shift, and go to state 93


state 65

   51 method_call: method_name . OPEN_PARENTHESES parameterList CLOSE_PARENTHESES

    OPEN_PARENTHESES  shift, and go to state 94


state 66

   20 var_decl_multiple: var_decl_single SEMI_COLON var_decl_multiple .

    $default  reduce using rule 20 (var_decl_multiple)


state 67

    9 id_single: COMMA IDENTIFIER OPEN_SQR_BRACKET int_literal CLOSE_SQR_BRACKET . id_single

    COMMA  shift, and go to state 22

    $default  reduce using rule 7 (id_single)

    id_single  go to state 95


state 68

   17 arg: COMMA TYPE IDENTIFIER . arg

    COMMA  shift, and go to state 42

    $default  reduce using rule 16 (arg)

    arg  go to state 96


state 69

   23 variableList: COMMA IDENTIFIER . variableList

    COMMA  shift, and go to state 51

    $default  reduce using rule 22 (variableList)

    variableList  go to state 97


state 70

   29 statement_single: FOR IDENTIFIER . ASSIGNMENT_OPERATOR expr COMMA expr block

    ASSIGNMENT_OPERATOR  shift, and go to state 98


state 71

   36 condition: OPEN_PARENTHESES . expr CLOSE_PARENTHESES

    CALLOUT           shift, and go to state 58
    IDENTIFIER        shift, and go to state 59
    HEX_LITERAL       shift, and go to state 30
    DECIMAL_LITERAL   shift, and go to state 31
    CHAR_LITERAL      shift, and go to state 75
    BOOL_LITERAL      shift, and go to state 76
    OPEN_PARENTHESES  shift, and go to state 77
    MINUS             shift, and go to state 78
    '!'               shift, and go to state 79

    expr            go to state 99
    location        go to state 82
    method_call     go to state 83
    method_name     go to state 65
    literal         go to state 84
    int_literal     go to state 85
    arith_expr      go to state 86
    rel_expr        go to state 87
    equal_expr      go to state 88
    condition_expr  go to state 89


state 72

   28 statement_single: IF condition . block else_block

    OPEN_BRACE  shift, and go to state 28

    block  go to state 100


state 73

   32 statement_single: CONTINUE SEMI_COLON .

    $default  reduce using rule 32 (statement_single)


state 74

   31 statement_single: BREAK SEMI_COLON .

    $default  reduce using rule 31 (statement_single)


state 75

   59 literal: CHAR_LITERAL .

    $default  reduce using rule 59 (literal)


state 76

   60 literal: BOOL_LITERAL .

    $default  reduce using rule 60 (literal)


state 77

   48 expr: OPEN_PARENTHESES . expr CLOSE_PARENTHESES

    CALLOUT           shift, and go to state 58
    IDENTIFIER        shift, and go to state 59
    HEX_LITERAL       shift, and go to state 30
    DECIMAL_LITERAL   shift, and go to state 31
    CHAR_LITERAL      shift, and go to state 75
    BOOL_LITERAL      shift, and go to state 76
    OPEN_PARENTHESES  shift, and go to state 77
    MINUS             shift, and go to state 78
    '!'               shift, and go to state 79

    expr            go to state 101
    location        go to state 82
    method_call     go to state 83
    method_name     go to state 65
    literal         go to state 84
    int_literal     go to state 85
    arith_expr      go to state 86
    rel_expr        go to state 87
    equal_expr      go to state 88
    condition_expr  go to state 89


state 78

   46 expr: MINUS . expr

    CALLOUT           shift, and go to state 58
    IDENTIFIER        shift, and go to state 59
    HEX_LITERAL       shift, and go to state 30
    DECIMAL_LITERAL   shift, and go to state 31
    CHAR_LITERAL      shift, and go to state 75
    BOOL_LITERAL      shift, and go to state 76
    OPEN_PARENTHESES  shift, and go to state 77
    MINUS             shift, and go to state 78
    '!'               shift, and go to state 79

    expr            go to state 102
    location        go to state 82
    method_call     go to state 83
    method_name     go to state 65
    literal         go to state 84
    int_literal     go to state 85
    arith_expr      go to state 86
    rel_expr        go to state 87
    equal_expr      go to state 88
    condition_expr  go to state 89


state 79

   47 expr: '!' . expr

    CALLOUT           shift, and go to state 58
    IDENTIFIER        shift, and go to state 59
    HEX_LITERAL       shift, and go to state 30
    DECIMAL_LITERAL   shift, and go to state 31
    CHAR_LITERAL      shift, and go to state 75
    BOOL_LITERAL      shift, and go to state 76
    OPEN_PARENTHESES  shift, and go to state 77
    MINUS             shift, and go to state 78
    '!'               shift, and go to state 79

    expr            go to state 103
    location        go to state 82
    method_call     go to state 83
    method_name     go to state 65
    literal         go to state 84
    int_literal     go to state 85
    arith_expr      go to state 86
    rel_expr        go to state 87
    equal_expr      go to state 88
    condition_expr  go to state 89


state 80

   30 statement_single: RETURN return_expr . SEMI_COLON

    SEMI_COLON  shift, and go to state 104


state 81

   38 return_expr: expr .
   63 arith_expr: expr . MULTIPLY expr
   64           | expr . DIVIDE expr
   65           | expr . MOD expr
   66           | expr . PLUS expr
   67           | expr . MINUS expr
   68 rel_expr: expr . LESS expr
   69         | expr . GREATER expr
   70         | expr . LESS_EQUAL expr
   71         | expr . GREATER_EQUAL expr
   72 equal_expr: expr . EQUAL_EQUAL expr
   73           | expr . NOT_EQUAL expr
   74 condition_expr: expr . AND expr
   75               | expr . OR expr

    OR             shift, and go to state 105
    AND            shift, and go to state 106
    NOT_EQUAL      shift, and go to state 107
    EQUAL_EQUAL    shift, and go to state 108
    LESS_EQUAL     shift, and go to state 109
    GREATER_EQUAL  shift, and go to state 110
    GREATER        shift, and go to state 111
    LESS           shift, and go to state 112
    MINUS          shift, and go to state 113
    PLUS           shift, and go to state 114
    MOD            shift, and go to state 115
    DIVIDE         shift, and go to state 116
    MULTIPLY       shift, and go to state 117

    $default  reduce using rule 38 (return_expr)


state 82

   39 expr: location .

    $default  reduce using rule 39 (expr)


state 83

   40 expr: method_call .

    $default  reduce using rule 40 (expr)


state 84

   41 expr: literal .

    $default  reduce using rule 41 (expr)


state 85

   58 literal: int_literal .

    $default  reduce using rule 58 (literal)


state 86

   42 expr: arith_expr .

    $default  reduce using rule 42 (expr)


state 87

   43 expr: rel_expr .

    $default  reduce using rule 43 (expr)


state 88

   44 expr: equal_expr .

    $default  reduce using rule 44 (expr)


state 89

   45 expr: condition_expr .

    $default  reduce using rule 45 (expr)


state 90

   52 method_call: CALLOUT OPEN_PARENTHESES . STRING_LITERAL callout_arg CLOSE_PARENTHESES

    STRING_LITERAL  shift, and go to state 118


state 91

   50 location: IDENTIFIER OPEN_SQR_BRACKET . expr CLOSE_SQR_BRACKET

    CALLOUT           shift, and go to state 58
    IDENTIFIER        shift, and go to state 59
    HEX_LITERAL       shift, and go to state 30
    DECIMAL_LITERAL   shift, and go to state 31
    CHAR_LITERAL      shift, and go to state 75
    BOOL_LITERAL      shift, and go to state 76
    OPEN_PARENTHESES  shift, and go to state 77
    MINUS             shift, and go to state 78
    '!'               shift, and go to state 79

    expr            go to state 119
    location        go to state 82
    method_call     go to state 83
    method_name     go to state 65
    literal         go to state 84
    int_literal     go to state 85
    arith_expr      go to state 86
    rel_expr        go to state 87
    equal_expr      go to state 88
    condition_expr  go to state 89


state 92

   26 statement_single: location ASSIGNMENT_OPERATOR . expr SEMI_COLON

    CALLOUT           shift, and go to state 58
    IDENTIFIER        shift, and go to state 59
    HEX_LITERAL       shift, and go to state 30
    DECIMAL_LITERAL   shift, and go to state 31
    CHAR_LITERAL      shift, and go to state 75
    BOOL_LITERAL      shift, and go to state 76
    OPEN_PARENTHESES  shift, and go to state 77
    MINUS             shift, and go to state 78
    '!'               shift, and go to state 79

    expr            go to state 120
    location        go to state 82
    method_call     go to state 83
    method_name     go to state 65
    literal         go to state 84
    int_literal     go to state 85
    arith_expr      go to state 86
    rel_expr        go to state 87
    equal_expr      go to state 88
    condition_expr  go to state 89


state 93

   27 statement_single: method_call SEMI_COLON .

    $default  reduce using rule 27 (statement_single)


state 94

   51 method_call: method_name OPEN_PARENTHESES . parameterList CLOSE_PARENTHESES
